Remove autorotate. Add repo link.

--- a/src/sass/home.sass
+++ b/src/sass/home.sass
@@ -35,3 +35,9 @@ p
     font-family: monospace
     text-align: center
     
+#fixedbutton 
+    position: fixed;
+    bottom: 20px;
+    right: 20px; 
+    z-index: 999999;
+
