--- a/home.css
+++ b/home.css
@@ -27,5 +27,11 @@ p {
     font-family: monospace;
     text-align: center; }
 
+#fixedbutton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999999; }
+
 
 /*# sourceMappingURL=home.css.map*/
